corrected spacing between recipe thumbnails

--- a/recipes-app/src/CSS/RecipePage.css
+++ b/recipes-app/src/CSS/RecipePage.css
@@ -10,6 +10,7 @@
     background-color: whitesmoke;
     box-shadow: 1px 1px;
     width: 30%;
+    margin-bottom: 1%;
 }
 
 .thumbnail-image {
